Fixed faqs list on mobile

--- a/css/framework-stylesheet/responsive.css
+++ b/css/framework-stylesheet/responsive.css
@@ -63,4 +63,8 @@
     footer #faqs h5{
         padding: 1em;
     }
+
+    footer #faqs ol{
+        text-align: left !important;
+    }
 }
